--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
     <!-- UIkit CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-rc.17/css/uikit.min.css" />
     <link rel="stylesheet" href="./assets/css/style.css" />
-    <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic" rel="stylesheet">
 
     <!-- UIkit JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-rc.17/js/uikit.min.js"></script>
@@ -39,202 +38,110 @@
 
     <title>Reverb</title>
   </head>
+
   <body style="background: linear-gradient(to bottom right, #5b247a, #1bcedf);">
 
-    <!-- <nav class="nav navbar" >
-        <a class="navbar-brand" href="index.html"><img src="./assets/reverb_logo.png"/></a>
-        <a href="#" class="register-nav ml-auto">Register</a>
-        <div class="menu-container" onclick="openNav()">
-          <div class="bar1"></div>
-          <div class="bar2"></div>
-          <div class="bar3"></div>
-        </div>
-    </nav>
 
-    <div id="myNav" class="overlay">
-      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-      <div class="overlay-content">
-        <a href="index.html"><img src="./assets/reverbpng.png" /></a>
-        <a href="about.html">About</a>
-        <a href="speakers.html">Speakers</a>
-        <a href="schedule.html">Schedule</a>
-        <a href="#">Register</a>
-        <a href="#">Store</a>
-      </div>
+    <div id="nav-full" class="uk-modal-full" uk-modal>
+        <div class="uk-modal-dialog" style="background-color: #3BB2B8">
+            <button class="uk-modal-close-full uk-close-large uk-light" type="button" style="background-color: #3BB2B8" uk-close></button>
+            <div class="uk-padding-small uk-flex uk-flex-center uk-flex-middle uk-flex-column">
+                <a class="uk-text-lead" href="#">Register</a>
+                <a class="uk-text-lead" href="#">Featured Guests</a>
+                <a class="uk-text-lead" href="#">Schedule</a>
+            </div>
+        </div>
     </div>
 
-    <div class="homepage-container">
-      <iframe class="promo-video" src="https://player.vimeo.com/video/195321907"
-       frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen>
-      </iframe>
-      <div class="r-button">
-        <a class="btn btn-register" href="#">Register Now</a>
-      </div>
-    </div> -->
 
-
-    <!-- <nav class="uk-navbar-container uk-navbar-transparent uk-margin" uk-navbar>
-      <div class="uk-navbar-left">
-
-          <a class="uk-navbar-item uk-logo" href="#">Logo</a>
-      </div>
-      <div class="uk-navbar-right">
-
-          <a class="uk-navbar-toggle" uk-navbar-toggle-icon href=""></a>
-
-           <div class="uk-navbar-item">
-
-          </div>
-
-      </div>
-    </nav> -->
-<div class="uk-position-relative">
-  <div class="vh-50 uk-background-primary uk-background-blend-color-burn uk-background-primary uk-background-cover uk-background-norepeat" data-src="./assets/rvb_wrshp.jpg" uk-img uk-parallax="blur: 5;"></div>
-    <div class="uk-position-top">
-        <nav class="uk-navbar-container uk-navbar-transparent uk-light" uk-navbar>
-            <div class="uk-navbar-left">
-                <a class="uk-navbar-item uk-logo" href="#"><img src="./assets/reverb_nav.png" /></a>
-            </div>
-            <div class="uk-navbar-right">
-                <a class="uk-navbar-toggle" uk-navbar-toggle-icon href=""></a>
-                 <div class="uk-navbar-item">
-
+    <div class="uk-position-relative">
+      <div class="vh-50 uk-background-primary uk-background-blend-color-burn uk-background-primary uk-background-cover uk-background-norepeat" data-src="./assets/rvb_wrshp.jpg" uk-img uk-parallax="blur: 5;"></div>
+        <div class="uk-position-top">
+            <nav class="uk-navbar-container uk-navbar-transparent uk-light" uk-navbar>
+                <div class="uk-navbar-left">
+                    <a class="uk-navbar-item uk-logo" href="#"><img src="./assets/reverb_nav.png" /></a>
                 </div>
+                <div class="uk-navbar-right">
+                    <a class="uk-navbar-toggle" uk-navbar-toggle-icon href="#nav-full" uk-toggle></a>
+                </div>
+            </nav>
+        </div>
+    </div>
+
+
+    <div class="uk-container">
+      <div class="uk-margin-medium-top uk-margin-medium-bottom" uk-grid>
+          <div class="uk-width-1-3@m uk-text-right">
+            <h1 class="uk-heading-primary gradient-header">REVERB YOUTH CONFERENCE 2019</h1>
+            <p class="txt-white">Feb 15-17 | Lake Williamson Retreat Center <br/> $140</p>
+            <button class="uk-button uk-button-default uk-button-large uk-light">REGISTER NOW</button>
+          </div>
+          <div class="uk-width-2-3@m">
+            <iframe class="promo-video" src="https://player.vimeo.com/video/291924387"
+              frameborder="0" allowfullscreen uk-responsive uk-video="autoplay: false">
+            </iframe>
+          </div>
+      </div>
+    </div>
+
+    <div style="background: linear-gradient(to bottom right, #622774, #c53364);">
+      <div class="uk-container txt-white">
+        <div class="uk-margin-medium-top">
+          <h1 class="txt-white">WHAT’S THE POINT?</h1>
+          <p>
+            We are built to reverberate the sound of heaven in our everyday life.
+            Our heart is that an entire generation of young people would make,
+            “On earth as it is in Heaven” the cry of their heart. In the schools,
+            in the homes, on the teams, and in the world. Sons and Daughters so fixed
+            on the faithfulness of the Father that everything else in this world fades
+            away. Students from all over the country coming together to to experience
+            an encounter from Heaven that leaves them never the same. Join us this year
+            at Reverb Youth Conference 2019 “The Sound of Heaven.”
+          </p>
+        </div>
+
+
+        <div class="uk-margin-medium-top uk-margin-medium-bottom">
+          <h1 class="txt-white">WHO IS THIS FOR?</h1>
+          <p> Reverb Youth Conference is designed for students 6th-12th grade. Everything from
+            the fun engaging games to the inspiring messages and the life changing moments in worship.
+            Reverb exist to bring students from across the country into meaningful relationships with
+            new friends and grow their relationship with God.
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <div class="uk-background-secondary">
+      <div class="uk-container">
+        <div class="uk-margin-medium-top uk-margin-bottom">
+          <h1 class="uk-heading-primary uk-text-center gradient-header">FEATURED GUESTS</h1>
+          <div class="uk-text-center uk-light uk-child-width-1-2@m" uk-grid>
+            <div>
+             <img class="guest-shot" src="./assets/Brandon.png" alt="" uk-image/>
+             <p>Brandon Henderson</p>
             </div>
-        </nav>
-    </div>
-</div>
-
-
-<div class="uk-container">
-  <div class="uk-margin-medium-top uk-margin-medium-bottom" uk-grid>
-      <div class="uk-width-1-3@m uk-text-right">
-        <h1 class="uk-heading-primary gradient-header">REVERB YOUTH CONFERENCE 2019</h1>
-        <p class="txt-white">Feb 15-17 | Lake Williamson Retreat Center <br/> $140</p>
-        <button class="uk-button uk-button-default uk-button-large uk-light">REGISTER NOW</button>
-      </div>
-      <div class="uk-width-2-3@m">
-        <iframe class="promo-video" src="https://player.vimeo.com/video/291924387"
-          frameborder="0" allowfullscreen uk-responsive uk-video="autoplay: false">
-        </iframe>
-      </div>
-  </div>
-</div>
-
-<div style="background: linear-gradient(to bottom right, #622774, #c53364);">
-  <div class="uk-container txt-white">
-    <div class="uk-margin-medium-top">
-      <h1 class="txt-white">WHAT’S THE POINT?</h1>
-      <p>
-        We are built to reverberate the sound of heaven in our everyday life.
-        Our heart is that an entire generation of young people would make,
-        “On earth as it is in Heaven” the cry of their heart. In the schools,
-        in the homes, on the teams, and in the world. Sons and Daughters so fixed
-        on the faithfulness of the Father that everything else in this world fades
-        away. Students from all over the country coming together to to experience
-        an encounter from Heaven that leaves them never the same. Join us this year
-        at Reverb Youth Conference 2019 “The Sound of Heaven.”
-      </p>
-    </div>
-
-    <div class="uk-margin-medium-top uk-margin-medium-bottom">
-      <h1 class="txt-white">WHO IS THIS FOR?</h1>
-      <p> Reverb Youth Conference is designed for students 6th-12th grade. Everything from
-        the fun engaging games to the inspiring messages and the life changing moments in worship.
-        Reverb exist to bring students from across the country into meaningful relationships with
-        new friends and grow their relationship with God.
-      </p>
-    </div>
-  </div>
-</div>
-
-<div class="uk-background-secondary">
-  <div class="uk-container">
-    <div class="uk-margin-medium-top uk-margin-bottom">
-      <h1 class="uk-heading-primary uk-text-center gradient-header">FEATURED GUESTS</h1>
-      <div class="uk-text-center uk-light uk-child-width-1-2" uk-grid>
-        <div>
-         <img class="guest-shot" src="./assets/Brandon.png" alt="" uk-image/>
-         <p>Brandon Henderson</p>
+            <div>
+              <img class="guest-shot" src="./assets/Samuel.png" alt="" uk-image/>
+              <p>Samuel Worden</p>
+            </div>
+            <div>
+              <img class="guest-shot" src="./assets/Keirstyn.png" alt="" uk-image/>
+              <p>Keirstyn Worden</p>
+            </div>
+            <div>
+              <img class="guest-shot" src="./assets/Kyle.png" alt="" uk-image/>
+              <p>Kyle Howard</p>
+            </div>
+          </div>
         </div>
-        <div>
-          <img class="guest-shot" src="./assets/Samuel.png" alt="" uk-image/>
-          <p>Samuel Wordon</p>
-        </div>
-        <div>
-          <img class="guest-shot" src="./assets/Keirstyn.png" alt="" uk-image/>
-          <p>Keirstyn Wordon</p>
-        </div>
-        <div>
-          <img class="guest-shot" src="./assets/Kyle.png" alt="" uk-image/>
-          <p>Kyle Howard</p>
-        </div>
-      <!-- <div><div class="uk-card uk-card-default uk-padding-small" uk-parallax="target: #test-easing; y: 200; easing: 0.5">0.5</div></div>
-      <div><div class="uk-card uk-card-default uk-padding-small" uk-parallax="target: #test-easing; y: 200; easing: 0.6">0.6</div></div>
-      <div><div class="uk-card uk-card-default uk-padding-small" uk-parallax="target: #test-easing; y: 200; easing: 0.8">0.8</div></div> -->
       </div>
     </div>
-  </div>
-</div>
 
 
 
 
 
-    <!-- <div class="vh-75 uk-background-primary uk-background-blend-color-burn uk-background-primary uk-background-cover uk-background-norepeat" data-src="./assets/rvb_wrshp.jpg" uk-img>...</div> -->
-
-
-    <!-- <div class="uk-flex uk-flex-center uk-flex-middle uk-flex-column uk-flex" style="height: 100vh">
-        <iframe class="promo-video" src="https://player.vimeo.com/video/291924387"
-          frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen>
-        </iframe>
-        <a class="register-threeD" href="#">Register Now</a>
-    </div> -->
-
-
-
-
-
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <!-- <script   src="https://code.jquery.com/jquery-3.3.1.min.js"   integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="   crossorigin="anonymous"></script> -->
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script> -->
-    <!-- <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script> -->
-    <!-- delete this -> <script src="/assets/js/rellax.min.js"></script> -->
-
-    <!-- <script type="text/javascript">
-
-      $(document).ready(function(){
-        var $nav = $('.nav');//Caching element
-        // hide .navbar first - you can also do this in css .nav{display:none;}
-        // $nav.hide();
-
-        // fade in .navbar
-        $(function () {
-            $(window).scroll(function () {
-                // set distance user needs to scroll before we start fadeIn
-                if ($(this).scrollTop() > 200) { //For dynamic effect use $nav.height() instead of '100'
-                    $nav.addClass("nav-background");
-                } else {
-                    $nav.removeClass("nav-background");
-                }
-            });
-        });
-      });
-
-      function openNav() {
-          document.getElementById("myNav").style.width = "100%";
-      }
-
-      function closeNav() {
-          document.getElementById("myNav").style.width = "0%";
-      }
-
-
-      // parallax
-      var rellax = new Rellax(".rellax");
-
-    </script> -->
 
 
   </body>
